Module autogen
Autogen of module
