# service/api/prueba/v1/errors.pb.go
@@ -1,0 +1,218 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.9
+// 	protoc        (unknown)
+// source: api/prueba/v1/errors.proto
+
+package prueba
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+// Minimum set of codes. Zero is mandatory in proto3.
+type ResponseCode int32
+
+const (
+	ResponseCode_RESPONSE_CODE_UNSPECIFIED           ResponseCode = 0
+	ResponseCode_RESPONSE_CODE_OK                    ResponseCode = 200 // success
+	ResponseCode_RESPONSE_CODE_BAD_REQUEST           ResponseCode = 400 // bad request
+	ResponseCode_RESPONSE_CODE_UNAUTHORIZED          ResponseCode = 401 // unauthorized
+	ResponseCode_RESPONSE_CODE_FORBIDDEN             ResponseCode = 403 // forbidden
+	ResponseCode_RESPONSE_CODE_NOT_FOUND             ResponseCode = 404 // not found
+	ResponseCode_RESPONSE_CODE_METHOD_NOT_ALLOWED    ResponseCode = 405 // method not allowed
+	ResponseCode_RESPONSE_CODE_INTERNAL_SERVER_ERROR ResponseCode = 500 // server error
+	ResponseCode_RESPONSE_CODE_NOT_IMPLEMENTED       ResponseCode = 501 // not implemented
+	ResponseCode_RESPONSE_CODE_SERVICE_UNAVAILABLE   ResponseCode = 503 // service unavailable
+)
+
+// Enum value maps for ResponseCode.
+var (
+	ResponseCode_name = map[int32]string{
+		0:   "RESPONSE_CODE_UNSPECIFIED",
+		200: "RESPONSE_CODE_OK",
+		400: "RESPONSE_CODE_BAD_REQUEST",
+		401: "RESPONSE_CODE_UNAUTHORIZED",
+		403: "RESPONSE_CODE_FORBIDDEN",
+		404: "RESPONSE_CODE_NOT_FOUND",
+		405: "RESPONSE_CODE_METHOD_NOT_ALLOWED",
+		500: "RESPONSE_CODE_INTERNAL_SERVER_ERROR",
+		501: "RESPONSE_CODE_NOT_IMPLEMENTED",
+		503: "RESPONSE_CODE_SERVICE_UNAVAILABLE",
+	}
+	ResponseCode_value = map[string]int32{
+		"RESPONSE_CODE_UNSPECIFIED":           0,
+		"RESPONSE_CODE_OK":                    200,
+		"RESPONSE_CODE_BAD_REQUEST":           400,
+		"RESPONSE_CODE_UNAUTHORIZED":          401,
+		"RESPONSE_CODE_FORBIDDEN":             403,
+		"RESPONSE_CODE_NOT_FOUND":             404,
+		"RESPONSE_CODE_METHOD_NOT_ALLOWED":    405,
+		"RESPONSE_CODE_INTERNAL_SERVER_ERROR": 500,
+		"RESPONSE_CODE_NOT_IMPLEMENTED":       501,
+		"RESPONSE_CODE_SERVICE_UNAVAILABLE":   503,
+	}
+)
+
+func (x ResponseCode) Enum() *ResponseCode {
+	p := new(ResponseCode)
+	*p = x
+	return p
+}
+
+func (x ResponseCode) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (ResponseCode) Descriptor() protoreflect.EnumDescriptor {
+	return file_api_prueba_v1_errors_proto_enumTypes[0].Descriptor()
+}
+
+func (ResponseCode) Type() protoreflect.EnumType {
+	return &file_api_prueba_v1_errors_proto_enumTypes[0]
+}
+
+func (x ResponseCode) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use ResponseCode.Descriptor instead.
+func (ResponseCode) EnumDescriptor() ([]byte, []int) {
+	return file_api_prueba_v1_errors_proto_rawDescGZIP(), []int{0}
+}
+
+// Your meta-object: only code and message.
+type MetaResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Code          ResponseCode           `protobuf:"varint,1,opt,name=code,proto3,enum=api.prueba.v1.ResponseCode" json:"code,omitempty"` // RESPONSE_CODE_OK or other codes
+	Message       string                 `protobuf:"bytes,2,opt,name=message,proto3" json:"message,omitempty"`                            // e.g. "ok", "ip blocked", "db error", "user not found"
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *MetaResponse) Reset() {
+	*x = MetaResponse{}
+	mi := &file_api_prueba_v1_errors_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *MetaResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*MetaResponse) ProtoMessage() {}
+
+func (x *MetaResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_prueba_v1_errors_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use MetaResponse.ProtoReflect.Descriptor instead.
+func (*MetaResponse) Descriptor() ([]byte, []int) {
+	return file_api_prueba_v1_errors_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *MetaResponse) GetCode() ResponseCode {
+	if x != nil {
+		return x.Code
+	}
+	return ResponseCode_RESPONSE_CODE_UNSPECIFIED
+}
+
+func (x *MetaResponse) GetMessage() string {
+	if x != nil {
+		return x.Message
+	}
+	return ""
+}
+
+var File_api_prueba_v1_errors_proto protoreflect.FileDescriptor
+
+const file_api_prueba_v1_errors_proto_rawDesc = "" +
+	"\n" +
+	"\x1aapi/prueba/v1/errors.proto\x12\rapi.prueba.v1\"Y\n" +
+	"\fMetaResponse\x12/\n" +
+	"\x04code\x18\x01 \x01(\x0e2\x1b.api.prueba.v1.ResponseCodeR\x04code\x12\x18\n" +
+	"\amessage\x18\x02 \x01(\tR\amessage*\xde\x02\n" +
+	"\fResponseCode\x12\x1d\n" +
+	"\x19RESPONSE_CODE_UNSPECIFIED\x10\x00\x12\x15\n" +
+	"\x10RESPONSE_CODE_OK\x10\xc8\x01\x12\x1e\n" +
+	"\x19RESPONSE_CODE_BAD_REQUEST\x10\x90\x03\x12\x1f\n" +
+	"\x1aRESPONSE_CODE_UNAUTHORIZED\x10\x91\x03\x12\x1c\n" +
+	"\x17RESPONSE_CODE_FORBIDDEN\x10\x93\x03\x12\x1c\n" +
+	"\x17RESPONSE_CODE_NOT_FOUND\x10\x94\x03\x12%\n" +
+	" RESPONSE_CODE_METHOD_NOT_ALLOWED\x10\x95\x03\x12(\n" +
+	"#RESPONSE_CODE_INTERNAL_SERVER_ERROR\x10\xf4\x03\x12\"\n" +
+	"\x1dRESPONSE_CODE_NOT_IMPLEMENTED\x10\xf5\x03\x12&\n" +
+	"!RESPONSE_CODE_SERVICE_UNAVAILABLE\x10\xf7\x03B\x1bZ\x19service/api/prueba;pruebab\x06proto3"
+
+var (
+	file_api_prueba_v1_errors_proto_rawDescOnce sync.Once
+	file_api_prueba_v1_errors_proto_rawDescData []byte
+)
+
+func file_api_prueba_v1_errors_proto_rawDescGZIP() []byte {
+	file_api_prueba_v1_errors_proto_rawDescOnce.Do(func() {
+		file_api_prueba_v1_errors_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_prueba_v1_errors_proto_rawDesc), len(file_api_prueba_v1_errors_proto_rawDesc)))
+	})
+	return file_api_prueba_v1_errors_proto_rawDescData
+}
+
+var file_api_prueba_v1_errors_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_api_prueba_v1_errors_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_api_prueba_v1_errors_proto_goTypes = []any{
+	(ResponseCode)(0),    // 0: api.prueba.v1.ResponseCode
+	(*MetaResponse)(nil), // 1: api.prueba.v1.MetaResponse
+}
+var file_api_prueba_v1_errors_proto_depIdxs = []int32{
+	0, // 0: api.prueba.v1.MetaResponse.code:type_name -> api.prueba.v1.ResponseCode
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_api_prueba_v1_errors_proto_init() }
+func file_api_prueba_v1_errors_proto_init() {
+	if File_api_prueba_v1_errors_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_prueba_v1_errors_proto_rawDesc), len(file_api_prueba_v1_errors_proto_rawDesc)),
+			NumEnums:      1,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_api_prueba_v1_errors_proto_goTypes,
+		DependencyIndexes: file_api_prueba_v1_errors_proto_depIdxs,
+		EnumInfos:         file_api_prueba_v1_errors_proto_enumTypes,
+		MessageInfos:      file_api_prueba_v1_errors_proto_msgTypes,
+	}.Build()
+	File_api_prueba_v1_errors_proto = out.File
+	file_api_prueba_v1_errors_proto_goTypes = nil
+	file_api_prueba_v1_errors_proto_depIdxs = nil
+}
