# service/docs/openapi/service.swagger.json
@@ -27,7 +27,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pruebav3FindPruebasResponse"
+              "$ref": "#/definitions/v1FindPruebasResponse"
             }
           },
           "default": {
@@ -65,7 +65,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pruebav3DeletePruebaByIdResponse"
+              "$ref": "#/definitions/v1DeletePruebaByIdResponse"
             }
           },
           "default": {
@@ -96,7 +96,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pruebav3UpsertPruebaResponse"
+              "$ref": "#/definitions/v1UpsertPruebaResponse"
             }
           },
           "default": {
@@ -112,7 +112,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/pruebav3UpsertPruebaRequest"
+              "$ref": "#/definitions/v1UpsertPruebaRequest"
             }
           }
         ],
@@ -280,281 +280,6 @@
       },
       "additionalProperties": {}
     },
-    "pruebav1DeletePruebaByIdResponse": {
-      "type": "object",
-      "properties": {
-        "meta": {
-          "$ref": "#/definitions/apipruebav1MetaResponse"
-        }
-      }
-    },
-    "pruebav1FindPruebasResponse": {
-      "type": "object",
-      "properties": {
-        "items": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/pruebav1Prueba"
-          }
-        },
-        "meta": {
-          "$ref": "#/definitions/apipruebav1MetaResponse"
-        }
-      }
-    },
-    "pruebav1Prueba": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
-        },
-        "createdAt": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "updatedAt": {
-          "type": "string",
-          "format": "date-time"
-        }
-      }
-    },
-    "pruebav1UpsertPruebaRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64",
-          "title": "0 -\u003e create"
-        },
-        "name": {
-          "type": "string",
-          "title": "required"
-        }
-      },
-      "required": [
-        "name"
-      ]
-    },
-    "pruebav1UpsertPruebaResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/pruebav1Prueba"
-        },
-        "meta": {
-          "$ref": "#/definitions/apipruebav1MetaResponse"
-        }
-      }
-    },
-    "pruebav2DeletePruebaByIdResponse": {
-      "type": "object",
-      "properties": {
-        "meta": {
-          "$ref": "#/definitions/pruebav2MetaResponse"
-        }
-      }
-    },
-    "pruebav2FindPruebasResponse": {
-      "type": "object",
-      "properties": {
-        "items": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/pruebav2Prueba"
-          }
-        },
-        "meta": {
-          "$ref": "#/definitions/pruebav2MetaResponse"
-        }
-      }
-    },
-    "pruebav2MetaResponse": {
-      "type": "object",
-      "properties": {
-        "code": {
-          "$ref": "#/definitions/pruebav2ResponseCode",
-          "title": "RESPONSE_CODE_OK or other codes"
-        },
-        "message": {
-          "type": "string",
-          "title": "e.g. \"ok\", \"ip blocked\", \"db error\", \"user not found\""
-        }
-      },
-      "description": "Your meta-object: only code and message."
-    },
-    "pruebav2Prueba": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
-        },
-        "createdAt": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "updatedAt": {
-          "type": "string",
-          "format": "date-time"
-        }
-      }
-    },
-    "pruebav2ResponseCode": {
-      "type": "string",
-      "enum": [
-        "RESPONSE_CODE_UNSPECIFIED",
-        "RESPONSE_CODE_OK",
-        "RESPONSE_CODE_BAD_REQUEST",
-        "RESPONSE_CODE_UNAUTHORIZED",
-        "RESPONSE_CODE_FORBIDDEN",
-        "RESPONSE_CODE_NOT_FOUND",
-        "RESPONSE_CODE_METHOD_NOT_ALLOWED",
-        "RESPONSE_CODE_INTERNAL_SERVER_ERROR",
-        "RESPONSE_CODE_NOT_IMPLEMENTED",
-        "RESPONSE_CODE_SERVICE_UNAVAILABLE"
-      ],
-      "default": "RESPONSE_CODE_UNSPECIFIED",
-      "description": "Minimum set of codes. Zero is mandatory in proto3.\n\n - RESPONSE_CODE_OK: success\n - RESPONSE_CODE_BAD_REQUEST: bad request\n - RESPONSE_CODE_UNAUTHORIZED: unauthorized\n - RESPONSE_CODE_FORBIDDEN: forbidden\n - RESPONSE_CODE_NOT_FOUND: not found\n - RESPONSE_CODE_METHOD_NOT_ALLOWED: method not allowed\n - RESPONSE_CODE_INTERNAL_SERVER_ERROR: server error\n - RESPONSE_CODE_NOT_IMPLEMENTED: not implemented\n - RESPONSE_CODE_SERVICE_UNAVAILABLE: service unavailable"
-    },
-    "pruebav2UpsertPruebaRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64",
-          "title": "0 -\u003e create"
-        },
-        "name": {
-          "type": "string",
-          "title": "required"
-        }
-      },
-      "required": [
-        "name"
-      ]
-    },
-    "pruebav2UpsertPruebaResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/pruebav2Prueba"
-        },
-        "meta": {
-          "$ref": "#/definitions/pruebav2MetaResponse"
-        }
-      }
-    },
-    "pruebav3DeletePruebaByIdResponse": {
-      "type": "object",
-      "properties": {
-        "meta": {
-          "$ref": "#/definitions/pruebav3MetaResponse"
-        }
-      }
-    },
-    "pruebav3FindPruebasResponse": {
-      "type": "object",
-      "properties": {
-        "items": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/pruebav3Prueba"
-          }
-        },
-        "meta": {
-          "$ref": "#/definitions/pruebav3MetaResponse"
-        }
-      }
-    },
-    "pruebav3MetaResponse": {
-      "type": "object",
-      "properties": {
-        "code": {
-          "$ref": "#/definitions/pruebav3ResponseCode",
-          "title": "RESPONSE_CODE_OK or other codes"
-        },
-        "message": {
-          "type": "string",
-          "title": "e.g. \"ok\", \"ip blocked\", \"db error\", \"user not found\""
-        }
-      },
-      "description": "Your meta-object: only code and message."
-    },
-    "pruebav3Prueba": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
-        },
-        "createdAt": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "updatedAt": {
-          "type": "string",
-          "format": "date-time"
-        }
-      }
-    },
-    "pruebav3ResponseCode": {
-      "type": "string",
-      "enum": [
-        "RESPONSE_CODE_UNSPECIFIED",
-        "RESPONSE_CODE_OK",
-        "RESPONSE_CODE_BAD_REQUEST",
-        "RESPONSE_CODE_UNAUTHORIZED",
-        "RESPONSE_CODE_FORBIDDEN",
-        "RESPONSE_CODE_NOT_FOUND",
-        "RESPONSE_CODE_METHOD_NOT_ALLOWED",
-        "RESPONSE_CODE_INTERNAL_SERVER_ERROR",
-        "RESPONSE_CODE_NOT_IMPLEMENTED",
-        "RESPONSE_CODE_SERVICE_UNAVAILABLE"
-      ],
-      "default": "RESPONSE_CODE_UNSPECIFIED",
-      "description": "Minimum set of codes. Zero is mandatory in proto3.\n\n - RESPONSE_CODE_OK: success\n - RESPONSE_CODE_BAD_REQUEST: bad request\n - RESPONSE_CODE_UNAUTHORIZED: unauthorized\n - RESPONSE_CODE_FORBIDDEN: forbidden\n - RESPONSE_CODE_NOT_FOUND: not found\n - RESPONSE_CODE_METHOD_NOT_ALLOWED: method not allowed\n - RESPONSE_CODE_INTERNAL_SERVER_ERROR: server error\n - RESPONSE_CODE_NOT_IMPLEMENTED: not implemented\n - RESPONSE_CODE_SERVICE_UNAVAILABLE: service unavailable"
-    },
-    "pruebav3UpsertPruebaRequest": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64",
-          "title": "0 -\u003e create"
-        },
-        "name": {
-          "type": "string",
-          "title": "required"
-        }
-      },
-      "required": [
-        "name"
-      ]
-    },
-    "pruebav3UpsertPruebaResponse": {
-      "type": "object",
-      "properties": {
-        "item": {
-          "$ref": "#/definitions/pruebav3Prueba"
-        },
-        "meta": {
-          "$ref": "#/definitions/pruebav3MetaResponse"
-        }
-      }
-    },
     "rpcStatus": {
       "type": "object",
       "properties": {
@@ -595,6 +320,14 @@
         }
       }
     },
+    "v1DeletePruebaByIdResponse": {
+      "type": "object",
+      "properties": {
+        "meta": {
+          "$ref": "#/definitions/apipruebav1MetaResponse"
+        }
+      }
+    },
     "v1DeleteTemplateByIdResponse": {
       "type": "object",
       "properties": {
@@ -604,6 +337,21 @@
         }
       },
       "description": "* Respuesta de eliminación."
+    },
+    "v1FindPruebasResponse": {
+      "type": "object",
+      "properties": {
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1Prueba"
+          }
+        },
+        "meta": {
+          "$ref": "#/definitions/apipruebav1MetaResponse"
+        }
+      }
     },
     "v1ListTemplatesResponse": {
       "type": "object",
@@ -622,6 +370,26 @@
         }
       },
       "description": "* Respuesta con la lista de plantillas."
+    },
+    "v1Prueba": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
     },
     "v1Template": {
       "type": "object",
@@ -647,6 +415,34 @@
         }
       },
       "description": "* Plantilla de alerta/aviso."
+    },
+    "v1UpsertPruebaRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "title": "0 -\u003e create"
+        },
+        "name": {
+          "type": "string",
+          "title": "required"
+        }
+      },
+      "required": [
+        "name"
+      ]
+    },
+    "v1UpsertPruebaResponse": {
+      "type": "object",
+      "properties": {
+        "item": {
+          "$ref": "#/definitions/v1Prueba"
+        },
+        "meta": {
+          "$ref": "#/definitions/apipruebav1MetaResponse"
+        }
+      }
     },
     "v1UpsertTemplateRequest": {
       "type": "object",
